@@ -1,3 +1,9 @@
 # Enchères
 
 Coder une interface graphique d'une enchère en respectant les règles de paternités.
+
+# Configuration JavaFX
+
+- Ajouter la librairie, "Project Structure" -> "Project Setting" -> "Librairies" -> "+" -> choisis le path ex: "C:\javafx-sdk-17.0.1\lib"
+
+- Ajouter la VM options, faut aller dans "Run" -> "Edit Configurations" -> "Modify Options" -> "Add VM Options" -> ajouter cette commande ex: "--module-path "C:\javafx-sdk-17.0.1\lib" --add-modules javafx.controls,javafx.fxml "
